fix: Migrate to Arch Linux for development, modify the comment area like function
